[BUG #7519] - Picker Highlight Overlay is broken on some devices
* Made Picker more customizable be variables.
* Removed iOS like overlay, added highlight line around for more usability

--- a/framework/source/resource/qx/mobile/css/android.css
+++ b/framework/source/resource/qx/mobile/css/android.css
@@ -1013,15 +1013,7 @@ input, select, .text-area {
   transition: all ease-in-out;
   transition-duration: .2s; }
 
-.picker-slot:first-child:before {
-  content: "";
-  position: absolute;
-  width: 2px;
-  top: -200%;
-  height: 500%;
-  z-index: 1000; }
-
-.picker-slot:first-child:after, .picker-slot:nth-child(n+1):after {
+.picker-slot:not(:last-child):after {
   content: "";
   position: absolute;
   width: 2px;
